--- a/baseproject/pom.xml
+++ b/baseproject/pom.xml
@@ -62,6 +62,11 @@
       <artifactId>mapper-spring-boot-starter</artifactId>
       <version>2.1.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>mybatisquery</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
