--- a/baseproject/src/main/resources/application-dev.properties
+++ b/baseproject/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port=9000
 #\u6570\u636E\u6E90
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/testsql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/testsql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC&allowMultiQueries=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mybatis
