自定义转换handler

--- a/baseproject/src/main/resources/application-dev.properties
+++ b/baseproject/src/main/resources/application-dev.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/*Mapper.xml
+mybatis.type-handlers-package=com.example.demo.handlers
+#mybatis.config-location=classpath:mybatis-config.xml
