--- a/mybatisquery/pom.xml
+++ b/mybatisquery/pom.xml
@@ -7,6 +7,18 @@
   <groupId>org.example</groupId>
   <artifactId>mybatisquery</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
     <dependency>
@@ -50,7 +62,20 @@
         </exclusion>
       </exclusions>
     </dependency>
-<!--    <dependency>-->
+    <!-- tkMapper   -->
+    <dependency>
+      <groupId>tk.mybatis</groupId>
+      <artifactId>mapper-spring-boot-starter</artifactId>
+      <version>2.1.5</version>
+    </dependency>
+    <!-- tk.mybatis -->
+    <dependency>
+      <groupId>tk.mybatis</groupId>
+      <artifactId>mapper</artifactId>
+      <version>4.1.5</version>
+      <scope>compile</scope>
+    </dependency>
+    <!--    <dependency>-->
 <!--      <groupId>com.baomidou</groupId>-->
 <!--      <artifactId>mybatis-plus</artifactId>-->
 <!--      <version>3.3.2</version>-->
