--- a/baseproject/pom.xml
+++ b/baseproject/pom.xml
@@ -17,6 +17,7 @@
   <properties>
     <java.version>1.8</java.version>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.mybatis.spring.boot</groupId>
@@ -61,6 +62,18 @@
       <groupId>tk.mybatis</groupId>
       <artifactId>mapper-spring-boot-starter</artifactId>
       <version>2.1.5</version>
+    </dependency>
+
+    <!--  aop  -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>5.1.5.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.2</version>
     </dependency>
   </dependencies>
 
