--- a/baseproject/src/main/resources/application-dev.properties
+++ b/baseproject/src/main/resources/application-dev.properties
@@ -1,10 +1,15 @@
 server.port=9000
 
 #\u6570\u636E\u6E90
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/testsql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.one.username=root
+spring.datasource.one.password=root
+spring.datasource.one.jdbcUrl=jdbc:mysql://localhost:3306/testsql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.one.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.datasource.two.username=zhanglei
+spring.datasource.two.password=Vhz1zD7aiWwbyyYNmr4DvCaZ_7MS6m3x
+spring.datasource.two.jdbcUrl=jdbc:mysql://linkthings-mysql-in.db.dev.easylinkin.net:3306/linkthings-dev?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.two.driverClassName=com.mysql.cj.jdbc.Driver
 
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/*Mapper.xml
